static/css/grellyd.css
/* main application css. */

.profile_image {
    border-radius: 100px;
    max-width: 50%;
    float: right;
}

img {
    max-height: 100%;
    max-width: 100%;
    border-radius: 10px;
}

video {
    max-height: 480px;
}

.xmas_image {
    height: 480px;
    width: auto;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
}

.autoplay_mobile {
    overflow: hidden;
    border-radius: 10px;
    display: none;
}

.autoplay_desktop {
    overflow: hidden;
    border-radius: 10px;
}

@media screen and (max-width: 700px) {
    .profile_image {
        float: none;
    }
    .autoplay_desktop {
        overflow: hidden;
        border-radius: 10px;
        display: none;
    }
    .autoplay_mobile {
        overflow: hidden;
        border-radius: 10px;
        display: inline-block;
    }
}

